fixes spacing issue on the epto systems page

--- a/wp-content/themes/classy/sass/pages/product-template.scss
+++ b/wp-content/themes/classy/sass/pages/product-template.scss
@@ -337,6 +337,9 @@
       font-size: 18px;
       text-align: center;
       margin-bottom: 40px;
+      padding-left: 15px;
+      padding-right: 15px;
+      
     }
 
     .owl-stage-outer {
